[gd_scene load_steps=120 format=3 uid="uid://c6h80c3ybtufk"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_f24wp"]
[ext_resource type="Texture2D" uid="uid://66k1sauy3fxl" path="res://assets/Base Character - Free/idle.png" id="2_ykr7c"]
[ext_resource type="Texture2D" uid="uid://2xkv7o8oux45" path="res://assets/Base Character - Free/walk.png" id="3_bbro3"]
[ext_resource type="Texture2D" uid="uid://duuxg74v7aike" path="res://assets/Base Character - Free/run.png" id="3_fxo4m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cfcvv"]
atlas = ExtResource("2_ykr7c")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsh1t"]
atlas = ExtResource("2_ykr7c")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmode"]
atlas = ExtResource("2_ykr7c")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_03q4n"]
atlas = ExtResource("2_ykr7c")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3meay"]
atlas = ExtResource("2_ykr7c")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwmpb"]
atlas = ExtResource("2_ykr7c")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qaqb"]
atlas = ExtResource("2_ykr7c")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs3ae"]
atlas = ExtResource("2_ykr7c")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8wl2"]
atlas = ExtResource("2_ykr7c")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp15v"]
atlas = ExtResource("2_ykr7c")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx68h"]
atlas = ExtResource("2_ykr7c")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj8tp"]
atlas = ExtResource("2_ykr7c")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4fsd"]
atlas = ExtResource("2_ykr7c")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnlp2"]
atlas = ExtResource("2_ykr7c")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbq1s"]
atlas = ExtResource("2_ykr7c")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oewh3"]
atlas = ExtResource("2_ykr7c")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_22q1m"]
atlas = ExtResource("3_fxo4m")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_no7in"]
atlas = ExtResource("3_fxo4m")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcadu"]
atlas = ExtResource("3_fxo4m")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ank8i"]
atlas = ExtResource("3_fxo4m")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppl8q"]
atlas = ExtResource("3_fxo4m")
region = Rect2(320, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf61i"]
atlas = ExtResource("3_fxo4m")
region = Rect2(400, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpsrh"]
atlas = ExtResource("3_fxo4m")
region = Rect2(480, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dgrq"]
atlas = ExtResource("3_fxo4m")
region = Rect2(560, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq2do"]
atlas = ExtResource("3_fxo4m")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g2rp"]
atlas = ExtResource("3_fxo4m")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5il7"]
atlas = ExtResource("3_fxo4m")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_le0ug"]
atlas = ExtResource("3_fxo4m")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yjp2"]
atlas = ExtResource("3_fxo4m")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_er878"]
atlas = ExtResource("3_fxo4m")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wyd2"]
atlas = ExtResource("3_fxo4m")
region = Rect2(480, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xahvw"]
atlas = ExtResource("3_fxo4m")
region = Rect2(560, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub5ty"]
atlas = ExtResource("3_fxo4m")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x084t"]
atlas = ExtResource("3_fxo4m")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlbl8"]
atlas = ExtResource("3_fxo4m")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ymg"]
atlas = ExtResource("3_fxo4m")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bx42"]
atlas = ExtResource("3_fxo4m")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbna1"]
atlas = ExtResource("3_fxo4m")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlonf"]
atlas = ExtResource("3_fxo4m")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kpja"]
atlas = ExtResource("3_fxo4m")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlyix"]
atlas = ExtResource("3_fxo4m")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfaft"]
atlas = ExtResource("3_fxo4m")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_77vuv"]
atlas = ExtResource("3_fxo4m")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm5sm"]
atlas = ExtResource("3_fxo4m")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j66c"]
atlas = ExtResource("3_fxo4m")
region = Rect2(320, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uqc3"]
atlas = ExtResource("3_fxo4m")
region = Rect2(400, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc2xn"]
atlas = ExtResource("3_fxo4m")
region = Rect2(480, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeilf"]
atlas = ExtResource("3_fxo4m")
region = Rect2(560, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dqnp"]
atlas = ExtResource("3_bbro3")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh8ov"]
atlas = ExtResource("3_bbro3")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y4rl"]
atlas = ExtResource("3_bbro3")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_te2j8"]
atlas = ExtResource("3_bbro3")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijw3y"]
atlas = ExtResource("3_bbro3")
region = Rect2(320, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfp8k"]
atlas = ExtResource("3_bbro3")
region = Rect2(400, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uibn1"]
atlas = ExtResource("3_bbro3")
region = Rect2(480, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5ty6"]
atlas = ExtResource("3_bbro3")
region = Rect2(560, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_djbmx"]
atlas = ExtResource("3_bbro3")
region = Rect2(560, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8tnt"]
atlas = ExtResource("3_bbro3")
region = Rect2(480, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mysm5"]
atlas = ExtResource("3_bbro3")
region = Rect2(400, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8rql"]
atlas = ExtResource("3_bbro3")
region = Rect2(320, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4vqv"]
atlas = ExtResource("3_bbro3")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_28ywm"]
atlas = ExtResource("3_bbro3")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_08q2w"]
atlas = ExtResource("3_bbro3")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pvub"]
atlas = ExtResource("3_bbro3")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvq1g"]
atlas = ExtResource("3_bbro3")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lihk1"]
atlas = ExtResource("3_bbro3")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc2a4"]
atlas = ExtResource("3_bbro3")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_du3qw"]
atlas = ExtResource("3_bbro3")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwnlv"]
atlas = ExtResource("3_bbro3")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfc4s"]
atlas = ExtResource("3_bbro3")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_epwkb"]
atlas = ExtResource("3_bbro3")
region = Rect2(480, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b4hn"]
atlas = ExtResource("3_bbro3")
region = Rect2(560, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3iwq"]
atlas = ExtResource("3_bbro3")
region = Rect2(560, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rltdo"]
atlas = ExtResource("3_bbro3")
region = Rect2(480, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylsye"]
atlas = ExtResource("3_bbro3")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_okt0p"]
atlas = ExtResource("3_bbro3")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0r678"]
atlas = ExtResource("3_bbro3")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmmb2"]
atlas = ExtResource("3_bbro3")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xq68"]
atlas = ExtResource("3_bbro3")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8nhv"]
atlas = ExtResource("3_bbro3")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3bdw"]
atlas = ExtResource("3_bbro3")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1uwp"]
atlas = ExtResource("3_bbro3")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw5ty"]
atlas = ExtResource("3_bbro3")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny6wm"]
atlas = ExtResource("3_bbro3")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5irs"]
atlas = ExtResource("3_bbro3")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_epyih"]
atlas = ExtResource("3_bbro3")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_63eis"]
atlas = ExtResource("3_bbro3")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rac8h"]
atlas = ExtResource("3_bbro3")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsyas"]
atlas = ExtResource("3_bbro3")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fsgj"]
atlas = ExtResource("3_bbro3")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fln2b"]
atlas = ExtResource("3_bbro3")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbceg"]
atlas = ExtResource("3_bbro3")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm78y"]
atlas = ExtResource("3_bbro3")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocwqw"]
atlas = ExtResource("3_bbro3")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s37d"]
atlas = ExtResource("3_bbro3")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxxtn"]
atlas = ExtResource("3_bbro3")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi8td"]
atlas = ExtResource("3_bbro3")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi8wv"]
atlas = ExtResource("3_bbro3")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4asc"]
atlas = ExtResource("3_bbro3")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_08l55"]
atlas = ExtResource("3_bbro3")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_owfr5"]
atlas = ExtResource("3_bbro3")
region = Rect2(320, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_10v4c"]
atlas = ExtResource("3_bbro3")
region = Rect2(400, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejvdv"]
atlas = ExtResource("3_bbro3")
region = Rect2(480, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hatlj"]
atlas = ExtResource("3_bbro3")
region = Rect2(560, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0he5s"]
atlas = ExtResource("3_bbro3")
region = Rect2(560, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s2ov"]
atlas = ExtResource("3_bbro3")
region = Rect2(480, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u6v4"]
atlas = ExtResource("3_bbro3")
region = Rect2(400, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6k7b"]
atlas = ExtResource("3_bbro3")
region = Rect2(320, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_udfkl"]
atlas = ExtResource("3_bbro3")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmudh"]
atlas = ExtResource("3_bbro3")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjjd1"]
atlas = ExtResource("3_bbro3")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7v6b"]
atlas = ExtResource("3_bbro3")
region = Rect2(0, 240, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_mnsa7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfcvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsh1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmode")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03q4n")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3meay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwmpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qaqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs3ae")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8wl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp15v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx68h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj8tp")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4fsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnlp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbq1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oewh3")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_22q1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no7in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcadu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ank8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppl8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf61i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpsrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dgrq")
}],
"loop": true,
"name": &"run_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq2do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g2rp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5il7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le0ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yjp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er878")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wyd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xahvw")
}],
"loop": true,
"name": &"run_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub5ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x084t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlbl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ymg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bx42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbna1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlonf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kpja")
}],
"loop": true,
"name": &"run_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlyix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfaft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77vuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm5sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j66c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uqc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc2xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeilf")
}],
"loop": true,
"name": &"run_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dqnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh8ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y4rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te2j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijw3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfp8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uibn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5ty6")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djbmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8tnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mysm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8rql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4vqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28ywm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08q2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pvub")
}],
"loop": true,
"name": &"walk_down_reverse",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvq1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lihk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc2a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_du3qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwnlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfc4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epwkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b4hn")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3iwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rltdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylsye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okt0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0r678")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmmb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xq68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8nhv")
}],
"loop": true,
"name": &"walk_left_reverse",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3bdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1uwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw5ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny6wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5irs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epyih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63eis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rac8h")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsyas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fsgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fln2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbceg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm78y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocwqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s37d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxxtn")
}],
"loop": true,
"name": &"walk_right_reverse",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi8td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi8wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4asc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08l55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owfr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10v4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejvdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hatlj")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0he5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s2ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u6v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6k7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udfkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmudh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjjd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7v6b")
}],
"loop": true,
"name": &"walk_up_reverse",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4713q"]
size = Vector2(5, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ibuxt"]
size = Vector2(9, 6)

[node name="player" type="CharacterBody2D"]
z_index = 5
y_sort_enabled = true
collision_layer = 2
collision_mask = 9
motion_mode = 1
script = ExtResource("1_f24wp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_mnsa7")
animation = &"run_down"
autoplay = "idle_right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -2)
shape = SubResource("RectangleShape2D_4713q")

[node name="Node2D" type="Node2D" parent="."]

[node name="bullet_cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="stamina_regen_cooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="hp_regen_cooldown" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="hurt_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="dash_cooldown" type="Timer" parent="."]
wait_time = 2.0

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
modulate = Color(1, 0, 0, 1)
position = Vector2(0.5, -2)
shape = SubResource("RectangleShape2D_ibuxt")

[connection signal="timeout" from="bullet_cooldown" to="." method="_on_bullet_cooldown_timeout"]
[connection signal="timeout" from="stamina_regen_cooldown" to="." method="_on_stamina_regen_cooldown_timeout"]
[connection signal="timeout" from="hp_regen_cooldown" to="." method="_on_hp_regen_cooldown_timeout"]
[connection signal="timeout" from="hurt_timer" to="." method="_on_hurt_timer_timeout"]
[connection signal="timeout" from="dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
